--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -479,33 +479,22 @@
 
   "faq": {
     "title": "Frequently asked questions",
-    "q1": "About the wallet",
-    "a1": "Algo wallet application has been initially created by Scholtz & Company, jsa. Open source, html only, coroporate friendly, and security are the main advantages for its usage. Algorand logo, word algo as well word algorand are trademarked by the algorand inc., and are used with algorand media guidelines https://www.algorand.com/about/media-kit/ .",
-    "q2": "How is my wallet data secured?",
-    "a2": "Your data is in the browser only. It is stored in persistant index db. Every wallet is encrypted using aes256 with your password. If you make strong enough password, your wallet will never be brute-forced. The password does not leave your computer and resides only in the browser cache. After 5 minutes after the login the cache is destroyed.",
-    "q3": "Does my wallet password go to the internet?",
-    "a3": "Never",
-    "q4": "How can I change the wallet password?",
-    "a4_1": "Login and access your wallet",
-    "a4_2": "Navigate to settings.",
-    "a4_3": "Type old password, new password, and confirm new password.",
-    "a4_4": "Submit form and your password will be changed.",
-    "q5": "Can I move my wallet to other computer?",
-    "a5_1": "Login and access your wallet",
-    "a5_2": "Navigate to settings.",
-    "a5_3": "Go to section backup and save your data to the local file.",
-    "a5_4": "In the other computer go to new wallet, import wallet, and upload the downloaded file to the other browser storage.",
-    "a5_5": "Access the wallet with the same password as before. You can change the password in settings.",
-    "q6": "Can I check your source code?",
-    "a6": "Yes. https://github.com/scholtz/wallet/ This wallet was made open source and is free to be used, copied or modified even for commercial purposes. If you are able to participate in the project, please be so kind and create a pull request with your improvement.",
+    "q1": "About the vote coin voting system",
+    "a1": "Decentralized voting platform based on Algorand message standard 0001 was winner solution at encode hackathon and later participated in encode accelerator program. Main advantage of this voting system is cost effeciency and auditable results by algorand blockchain. Vote coin, similar as algorand governance uses the note field in the transactions as the data storage. Vote coin provides technical solution for knowledge based democracy. Person can delegate his voting power to other person. Delegation may be partial, one can give 50 points to person A and 100 points to person B. Delegation can be also content specific. If person trusts person A in economy matters he can delegate his full voting power to him, while he can delegate full voting power in matter of IT tech to person B. Casting of the votes can be changed, and the last vote in the voting round is valid. Voting can be used as 1 vote = 1 vote, or 1 person = 1 vote. Quadratic voting can be applied if DAO requires it. Voting can be used by DAOs, corporations, governments or individuals. Audit services may be purchased.",
+    "q2": "Can I have my custom ASA as basis for 1 vote = 1 ASA token?",
+    "a2": "Yes. This is the main use case. DAO usually has distributed their tokens to the owners. DAO asks a question which costs 0.001 algo. DAO members vote or delegate their voting power to other members. After voting is finished, auditors publish the results. At the end, DAO calculates results or takes the results of the auditors, and publish the final vote result. From this message the action may be triggered, for example the github PR merge.",
+    "q3": "Is delegation pernament?",
+    "a3": "Yes, the delegation within scope of the asset is pernament until it has been changed. When person trusts the politician, he delegates him his voting power. Person can change his delegation preferences any time. The decision point for vote calculation is the final block of the voting. If person A votes and person B does not vote, if person B delegate his voting power to person A 1 block before end of the voting, his voting power for this voting session will be transfered.",
+    "q6": "Why do you call it knowledge based pure democracy system?",
+    "a6": "Aggregation of wisdom is ensured by categorized delegation. Every question is context based. Some questions requires IT knowledge, some questions requires knowledge of laws. If person A trusts person B and C in IT matters, he can delegate for example 20 IT points to person B, 30 IT points to person C, and 20 Legal points to person D. If there is question regarding the IT stuff, for example github PR merge request and person A does not vote, he delegates his voting power to 20/50 to person B, and 30/50 to person C. Person B can delegate his voting power to other persons he knows they do good decisions, for example 100 IT points to person C. If only person C votes, he receives the voting power from person A, B, and himself. Delegation of power does not mean that person cannot vote. It is pure democratic system which means that if person votes, he always represents his voting power, and his voting power is not being used by anyone else.",
     "q7": "How can I help the project?",
-    "a7_1": "Donatation to algorand address P65LXHA5MEDMOJ2ZAITLZWYSU6W25BF2FCXJ5KQRDUB2NT2T7DPAAFYT3U will help the project going. The project has not been funded from algorand inc nor algorand foundation.",
-    "a7_2": "To translate project or help with the translation, please go to  https://github.com/scholtz/wallet/tree/master/src/locales, copy the translation file to your language and make a pull request.",
-    "a7_3": "If you are a programmer, please do a code review, or help us in any way you think this project should be better.",
-    "q8": "How to make multisignature account?",
-    "a8_1": "First create the accounts with the private keys or create public accounts. It is better to give them names you will remember its purpose.",
-    "a8_2": "Go to create new addrress and select multisignature address.",
-    "a8_3": "Select all accounts which can sign the transactions and select how  many signatures are minimum for the network to accept the multisig payment.",
-    "a8_4": "After you create the multisignature account, you can access it from the accounts list page."
+    "a7_1": "Please spread the word on youtube, twitter or other means. We have active engagement program where you can receive Vote Coin tokens.",
+    "a7_2": "If you are developer, please take a look at the engagement program. If you create open source solution based on the vote coin standard, you can receive vote coin token rewards.",
+    "a7_3": "If you represent a DAO or corporation, please support us by purchasing Auditing services. We will calculate the results of voting for you so that you can be ensured you have the correct results.",
+    "q8": "How much will it cost me?",
+    "a8_1": "If you are DAO, it will cost you 0.002 algo per question - you ask a question through blockchain, and set final results.",
+    "a8_2": "Your DAO members will pay pay 0.001 algo to cast votes. They can delegate their voting power for 0.001 to other persons so that they do not have to vote in each question, but rather delegate their voting power to trusted person.",
+    "a8_3": "If DAO wants to manage their own list of allowed person, in one transaction it can add approx 15 accounts to the trusted list.",
+    "a8_4": "If you are single person who wants to ask a question, just place a question to the algo token."
   }
 }
