--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -479,33 +479,22 @@
 
   "faq": {
     "title": "Často kladené otázky",
-    "q1": "O peňaženke",
-    "a1": "Aplikáciu peňaženky Algo pôvodne vytvorila spoločnosť Scholtz & Company, jsa. Hlavnými výhodami jeho používania je otvorený zdrojový kód, čisté html, kompatibilný s korporátnymi požiadavkami a zabezpečenie.",
-    "q2": "Ako sú zabezpečené moje údaje v peňaženke?",
-    "a2": "Vaše údaje sú iba v prehliadači. Sú uložené v trvalom úložisku indexdb. Každá peňaženka je šifrovaná pomocou aes256 pomocou hesla peňaženky. Ak nastavíte dostatočne silné heslo, Vaša peňaženka nebude nikdy prelomená hrubou silou. Heslo neopustí váš počítač a nachádza sa iba v medzipamäti prehliadača. Po 5 minútach od prihlásenia je cache zničená.",
-    "q3": "Ide moje heslo k peňaženke na internet?",
-    "a3": "Nikdy",
-    "q4": "Ako môžem zmeniť heslo k peňaženke?",
-    "a4_1": "Prihláste sa a vstúpte do svojej peňaženky",
-    "a4_2": "Prejdite do nastavení",
-    "a4_3": "Zadajte staré heslo, nové heslo a potvrďte nové heslo",
-    "a4_4": "Odošlite formulár a vaše heslo bude zmenené",
-    "q5": "Môžem presunúť svoju peňaženku do iného počítača?",
-    "a5_1": "Prihláste sa a vstúpte do svojej peňaženky",
-    "a5_2": "Prejdite do nastavení",
-    "a5_3": "Prejdite do sekcie zálohovanie a uložte svoje údaje do miestneho súboru",
-    "a5_4": "V druhom počítači prejdite do sekcie nová peňaženka, importujte peňaženku zo stiahnutého súboru a nahrajte do druhého prehľadávača",
-    "a5_5": "Prístup do peňaženky je s rovnakým heslom ako predtým. Heslo si môžete zmeniť v nastaveniach.",
-    "q6": "Môžem skontrolovať váš zdrojový kód?",
-    "a6": "Áno. https://github.com/scholtz/wallet/ Táto peňaženka bola vytvorená ako otvorený zdroj a je možné ju bezplatne používať, kopírovať alebo upravovať aj na komerčné účely. Ak sa môžete na projekte zúčastniť, buďte prosím láskaví a vytvorte pull request v oficiálnom gite so svojím vylepšením.",
-    "q7": "Ako môžem projektu pomôcť?",
-    "a7_1": "Príspevok na algo adresu P65LXHA5MEDMOJ2ZAITLZWYSU6W25BF2FCXJ5KQRDUB2NT2T7DPAAFYT3U pomôže projektu pokračovať. Projekt nebol financovaný z Algorand inc ani Algorand foundation.",
-    "a7_2": "Ak chcete preložiť projekt alebo pomôcť s prekladom, prejdite na stránku https://github.com/scholtz/wallet/tree/master/src/locales, skopírujte prekladový súbor do svojho jazyka a vytvorte pull request.",
-    "a7_3": "Ak ste programátor, skontrolujte kód alebo nám pomôžte akýmkoľvek spôsobom akým uznáte za vhodné aby bol tento projekt lepší.",
-    "q8": "Ako vytvoriť účet s viacerými podpismi?",
-    "a8_1": "Najskôr vytvorte účty pomocou súkromných kľúčov alebo vytvorte verejné účty. Je lepšie dať im mená, ktoré si pamätáte.",
-    "a8_2": "Prejdite na vytvorenie novej adresy a vyberte adresu s viacerými podpismi.",
-    "a8_3": "Vyberte všetky účty, ktoré môžu podpisovať transakcie, a vyberte počet podpisov, ktoré sú minimálne na to, aby sieť mohla akceptovať multipodpisovú platbu.",
-    "a8_4": "Po vytvorení účtu s viacerými podpismi k nemu získate prístup zo stránky so zoznamom účtov."
+    "q1": "About the vote coin voting system",
+    "a1": "Decentralized voting platform based on Algorand message standard 0001 was winner solution at encode hackathon and later participated in encode accelerator program. Main advantage of this voting system is cost effeciency and auditable results by algorand blockchain. Vote coin, similar as algorand governance uses the note field in the transactions as the data storage. Vote coin provides technical solution for knowledge based democracy. Person can delegate his voting power to other person. Delegation may be partial, one can give 50 points to person A and 100 points to person B. Delegation can be also content specific. If person trusts person A in economy matters he can delegate his full voting power to him, while he can delegate full voting power in matter of IT tech to person B. Casting of the votes can be changed, and the last vote in the voting round is valid. Voting can be used as 1 vote = 1 vote, or 1 person = 1 vote. Quadratic voting can be applied if DAO requires it. Voting can be used by DAOs, corporations, governments or individuals. Audit services may be purchased.",
+    "q2": "Can I have my custom ASA as basis for 1 vote = 1 ASA token?",
+    "a2": "Yes. This is the main use case. DAO usually has distributed their tokens to the owners. DAO asks a question which costs 0.001 algo. DAO members vote or delegate their voting power to other members. After voting is finished, auditors publish the results. At the end, DAO calculates results or takes the results of the auditors, and publish the final vote result. From this message the action may be triggered, for example the github PR merge.",
+    "q3": "Is delegation pernament?",
+    "a3": "Yes, the delegation within scope of the asset is pernament until it has been changed. When person trusts the politician, he delegates him his voting power. Person can change his delegation preferences any time. The decision point for vote calculation is the final block of the voting. If person A votes and person B does not vote, if person B delegate his voting power to person A 1 block before end of the voting, his voting power for this voting session will be transfered.",
+    "q6": "Why do you call it knowledge based pure democracy system?",
+    "a6": "Aggregation of wisdom is ensured by categorized delegation. Every question is context based. Some questions requires IT knowledge, some questions requires knowledge of laws. If person A trusts person B and C in IT matters, he can delegate for example 20 IT points to person B, 30 IT points to person C, and 20 Legal points to person D. If there is question regarding the IT stuff, for example github PR merge request and person A does not vote, he delegates his voting power to 20/50 to person B, and 30/50 to person C. Person B can delegate his voting power to other persons he knows they do good decisions, for example 100 IT points to person C. If only person C votes, he receives the voting power from person A, B, and himself. Delegation of power does not mean that person cannot vote. It is pure democratic system which means that if person votes, he always represents his voting power, and his voting power is not being used by anyone else.",
+    "q7": "How can I help the project?",
+    "a7_1": "Please spread the word on youtube, twitter or other means. We have active engagement program where you can receive Vote Coin tokens.",
+    "a7_2": "If you are developer, please take a look at the engagement program. If you create open source solution based on the vote coin standard, you can receive vote coin token rewards.",
+    "a7_3": "If you represent a DAO or corporation, please support us by purchasing Auditing services. We will calculate the results of voting for you so that you can be ensured you have the correct results.",
+    "q8": "How much will it cost me?",
+    "a8_1": "If you are DAO, it will cost you 0.002 algo per question - you ask a question through blockchain, and set final results.",
+    "a8_2": "Your DAO members will pay pay 0.001 algo to cast votes. They can delegate their voting power for 0.001 to other persons so that they do not have to vote in each question, but rather delegate their voting power to trusted person.",
+    "a8_3": "If DAO wants to manage their own list of allowed person, in one transaction it can add approx 15 accounts to the trusted list.",
+    "a8_4": "If you are single person who wants to ask a question, just place a question to the algo token."
   }
 }
