--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -479,33 +479,22 @@
 
   "faq": {
     "title": "Domande frequenti",
-    "q1": "Riguardo al wallet",
-    "a1": "L'applicazione Algo wallet è stata inizialmente creata da Scholtz & Company, jsa. Open source, solo html, corporate friendly, e sicurezza sono i principali vantaggi del suo utilizzo.",
-    "q2": "Come sono protetti i dati del mio wallet?",
-    "a2": "I tuoi dati sono solo nel browser. Sono memorizzati in un database persistente. Ogni wallet è criptato usando aes256 con la tua password. Se scegli una password abbastanza forte, il tuo wallet non sarà mai forzato. La password non lascia il tuo computer e risiede solo nella cache del browser. Dopo 5 minuti dal login la cache viene distrutta.",
-    "q3": "La password del mio wallet va su internet?",
-    "a3": "Mai",
-    "q4": "Come posso cambiare la password del wallet?",
-    "a4_1": "Effettua il login e accedi al tuo wallet",
-    "a4_2": "Vai alle impostazioni.",
-    "a4_3": "Digita la vecchia password, la nuova password e conferma la nuova password.",
-    "a4_4": "Invia il form e la tua password verrà cambiata.",
-    "q5": "Posso spostare il mio wallet su un altro computer?",
-    "a5_1": "Effettua il login e accedi al tuo wallet",
-    "a5_2": "Vai alle impostazioni.",
-    "a5_3": "Vai alla sezione backup e salva i tuoi dati in un file locale.",
-    "a5_4": "Nell'altro computer vai a nuovo wallet, importa wallet, e carica il file esportato nella memoria del nuovo browser.",
-    "a5_5": "Accedi al wallet con la stessa password di prima. Puoi cambiare la password nelle impostazioni.",
-    "q6": "Posso controllare il tuo codice sorgente?",
-    "a6": "Sì. https://github.com/scholtz/wallet/ Questo wallet è stato reso open source ed è libero di essere usato, copiato o modificato anche per scopi commerciali. Se sei in grado di partecipare al progetto, sii così gentile da creare una richiesta di pull con i tuoi contributi.",
-    "q7": "Come posso aiutare il progetto?",
-    "a7_1": "Una donazione all'indirizzo Algorand P65LXHA5MEDMOJ2ZAITLZWYSU6W25BF2FCXJ5KQRDUB2NT2T7DPAAFYT3U aiuterà il progetto ad andare avanti. Il progetto non è stato finanziato da Algorand inc né dalla fondazione Algorand.",
-    "a7_2": "Per tradurre il progetto o aiutare con la traduzione, vai su https://github.com/scholtz/wallet/tree/master/src/locales, copia il file di traduzione nella tua lingua e fai una richiesta di pull.",
-    "a7_3": "Se sei un programmatore, per favore fai una revisione del codice, o aiutaci in qualsiasi modo tu pensi che questo progetto possa essere migliorato.",
-    "q8": "Come fare un account multifirma?",
-    "a8_1": "Per prima cosa create gli account con le chiavi private o create account pubblici. È meglio dare loro dei nomi che vi ricorderanno il loro scopo.",
-    "a8_2": "Andate su crea nuovo indirizzo e selezionate l'indirizzo multifirma.",
-    "a8_3": "Seleziona tutti i gli account che possono firmare le transazioni e seleziona quante firme sono necessarie come minimo perché la rete accetti il pagamento multifirma.",
-    "a8_4": "Dopo aver creato l'account multifirma, puoi accedervi dalla pagina dell'elenco degli account."
+    "q1": "About the vote coin voting system",
+    "a1": "Decentralized voting platform based on Algorand message standard 0001 was winner solution at encode hackathon and later participated in encode accelerator program. Main advantage of this voting system is cost effeciency and auditable results by algorand blockchain. Vote coin, similar as algorand governance uses the note field in the transactions as the data storage. Vote coin provides technical solution for knowledge based democracy. Person can delegate his voting power to other person. Delegation may be partial, one can give 50 points to person A and 100 points to person B. Delegation can be also content specific. If person trusts person A in economy matters he can delegate his full voting power to him, while he can delegate full voting power in matter of IT tech to person B. Casting of the votes can be changed, and the last vote in the voting round is valid. Voting can be used as 1 vote = 1 vote, or 1 person = 1 vote. Quadratic voting can be applied if DAO requires it. Voting can be used by DAOs, corporations, governments or individuals. Audit services may be purchased.",
+    "q2": "Can I have my custom ASA as basis for 1 vote = 1 ASA token?",
+    "a2": "Yes. This is the main use case. DAO usually has distributed their tokens to the owners. DAO asks a question which costs 0.001 algo. DAO members vote or delegate their voting power to other members. After voting is finished, auditors publish the results. At the end, DAO calculates results or takes the results of the auditors, and publish the final vote result. From this message the action may be triggered, for example the github PR merge.",
+    "q3": "Is delegation pernament?",
+    "a3": "Yes, the delegation within scope of the asset is pernament until it has been changed. When person trusts the politician, he delegates him his voting power. Person can change his delegation preferences any time. The decision point for vote calculation is the final block of the voting. If person A votes and person B does not vote, if person B delegate his voting power to person A 1 block before end of the voting, his voting power for this voting session will be transfered.",
+    "q6": "Why do you call it knowledge based pure democracy system?",
+    "a6": "Aggregation of wisdom is ensured by categorized delegation. Every question is context based. Some questions requires IT knowledge, some questions requires knowledge of laws. If person A trusts person B and C in IT matters, he can delegate for example 20 IT points to person B, 30 IT points to person C, and 20 Legal points to person D. If there is question regarding the IT stuff, for example github PR merge request and person A does not vote, he delegates his voting power to 20/50 to person B, and 30/50 to person C. Person B can delegate his voting power to other persons he knows they do good decisions, for example 100 IT points to person C. If only person C votes, he receives the voting power from person A, B, and himself. Delegation of power does not mean that person cannot vote. It is pure democratic system which means that if person votes, he always represents his voting power, and his voting power is not being used by anyone else.",
+    "q7": "How can I help the project?",
+    "a7_1": "Please spread the word on youtube, twitter or other means. We have active engagement program where you can receive Vote Coin tokens.",
+    "a7_2": "If you are developer, please take a look at the engagement program. If you create open source solution based on the vote coin standard, you can receive vote coin token rewards.",
+    "a7_3": "If you represent a DAO or corporation, please support us by purchasing Auditing services. We will calculate the results of voting for you so that you can be ensured you have the correct results.",
+    "q8": "How much will it cost me?",
+    "a8_1": "If you are DAO, it will cost you 0.002 algo per question - you ask a question through blockchain, and set final results.",
+    "a8_2": "Your DAO members will pay pay 0.001 algo to cast votes. They can delegate their voting power for 0.001 to other persons so that they do not have to vote in each question, but rather delegate their voting power to trusted person.",
+    "a8_3": "If DAO wants to manage their own list of allowed person, in one transaction it can add approx 15 accounts to the trusted list.",
+    "a8_4": "If you are single person who wants to ask a question, just place a question to the algo token."
   }
 }
