--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -479,33 +479,22 @@
 
     "faq": {
       "title": "Veelgestelde vragen",
-      "q1": "Over de portemonnee",
-      "a1": "Algo wallet applicatie is in eerste instantie gemaakt door Scholtz & Company, jsa. Open source, html only, coroporate vriendelijk, en veiligheid zijn de belangrijkste voordelen voor het gebruik ervan.",
-      "q2": "Hoe is mijn wallet data beveiligd?",
-      "a2": "Uw gegevens zijn alleen in de browser. Het wordt opgeslagen in een persistente index db. Elke portemonnee is versleuteld met aes256 met uw wachtwoord. Als u een sterk genoeg wachtwoord maakt, zal uw portemonnee nooit worden gebruteforceerd. Het wachtwoord verlaat uw computer niet en bevindt zich alleen in de cache van de browser. Na 5 minuten na het inloggen wordt de cache vernietigd.",
-      "q3": "Gaat het wachtwoord van mijn portemonnee naar het internet?",
-      "a3": "Nooit",
-      "q4": "Hoe kan ik het wachtwoord van de portefeuille wijzigen?",
-      "a4_1": "Log in en krijg toegang tot uw portemonnee",
-      "a4_2": "Navigeer naar instellingen.",
-      "a4_3": "Typ oud wachtwoord, nieuw wachtwoord, en bevestig nieuw wachtwoord.",
-      "a4_4": "Verstuur formulier en uw wachtwoord wordt gewijzigd.",
-      "q5": "Kan ik mijn portefeuille naar een andere computer verplaatsen?",
-      "a5_1": "Inloggen en toegang tot uw portemonnee",
-      "a5_2": "Navigeer naar instellingen.",
-      "a5_3": "Ga naar sectie back-up en sla uw gegevens op in het lokale bestand.",
-      "a5_4": "Ga in de andere computer naar nieuwe portemonnee, importeer portemonnee, en upload het gedownloade bestand naar de andere browseropslag.",
-      "a5_5": "Krijg toegang tot de portemonnee met hetzelfde wachtwoord als voorheen. U kunt het wachtwoord wijzigen in de instellingen.",
-      "q6": "Kan ik uw broncode bekijken?",
-      "a6": "Ja. https://github.com/scholtz/wallet/ Deze wallet is open source gemaakt en is vrij om te gebruiken, te kopiëren of aan te passen, zelfs voor commerciële doeleinden. Als u in staat bent om deel te nemen aan het project, wees dan zo vriendelijk en maak een pull request aan met uw verbetering.",
-      "q7": "Hoe kan ik het project helpen?",
-      "a7_1": "Donatie aan algorand adres P65LXHA5MEDMOJ2ZAITLZWYSU6W25BF2FCXJ5KQRDUB2NT2T7DPAAFYT3U zal het project op gang helpen. Het project is niet gefinancierd door algorand inc noch door algorand foundation.",
-      "a7_2": "Om het project te vertalen of te helpen met de vertaling, ga naar https://github.com/scholtz/wallet/tree/master/src/locales, kopieer het vertaalbestand naar jouw taal en doe een pull-verzoek.",
-      "a7_3": "Als je een programmeur bent, doe dan alsjeblieft een code review, of help ons op welke manier dan ook waarvan je denkt dat dit project beter zou moeten zijn.",
-      "q8": "Hoe maak je een rekening met meerdere handtekeningen?",
-      "a8_1": "Maak eerst de accounts aan met de private sleutels of maak publieke accounts aan. Het is beter om ze namen te geven die je zult onthouden voor het doel ervan.",
-      "a8_2": "Ga naar nieuw adres aanmaken en selecteer adres met meerdere handtekeningen.",
-      "a8_3": "Selecteer alle accounts die de transacties kunnen ondertekenen en selecteer hoeveel handtekeningen minimaal zijn voor het netwerk om de multisig-betaling te accepteren.",
-      "a8_4": "Nadat u de multisignature-rekening hebt aangemaakt, kunt u deze openen via de rekeningenlijstpagina."
+      "q1": "About the vote coin voting system",
+      "a1": "Decentralized voting platform based on Algorand message standard 0001 was winner solution at encode hackathon and later participated in encode accelerator program. Main advantage of this voting system is cost effeciency and auditable results by algorand blockchain. Vote coin, similar as algorand governance uses the note field in the transactions as the data storage. Vote coin provides technical solution for knowledge based democracy. Person can delegate his voting power to other person. Delegation may be partial, one can give 50 points to person A and 100 points to person B. Delegation can be also content specific. If person trusts person A in economy matters he can delegate his full voting power to him, while he can delegate full voting power in matter of IT tech to person B. Casting of the votes can be changed, and the last vote in the voting round is valid. Voting can be used as 1 vote = 1 vote, or 1 person = 1 vote. Quadratic voting can be applied if DAO requires it. Voting can be used by DAOs, corporations, governments or individuals. Audit services may be purchased.",
+      "q2": "Can I have my custom ASA as basis for 1 vote = 1 ASA token?",
+      "a2": "Yes. This is the main use case. DAO usually has distributed their tokens to the owners. DAO asks a question which costs 0.001 algo. DAO members vote or delegate their voting power to other members. After voting is finished, auditors publish the results. At the end, DAO calculates results or takes the results of the auditors, and publish the final vote result. From this message the action may be triggered, for example the github PR merge.",
+      "q3": "Is delegation pernament?",
+      "a3": "Yes, the delegation within scope of the asset is pernament until it has been changed. When person trusts the politician, he delegates him his voting power. Person can change his delegation preferences any time. The decision point for vote calculation is the final block of the voting. If person A votes and person B does not vote, if person B delegate his voting power to person A 1 block before end of the voting, his voting power for this voting session will be transfered.",
+      "q6": "Why do you call it knowledge based pure democracy system?",
+      "a6": "Aggregation of wisdom is ensured by categorized delegation. Every question is context based. Some questions requires IT knowledge, some questions requires knowledge of laws. If person A trusts person B and C in IT matters, he can delegate for example 20 IT points to person B, 30 IT points to person C, and 20 Legal points to person D. If there is question regarding the IT stuff, for example github PR merge request and person A does not vote, he delegates his voting power to 20/50 to person B, and 30/50 to person C. Person B can delegate his voting power to other persons he knows they do good decisions, for example 100 IT points to person C. If only person C votes, he receives the voting power from person A, B, and himself. Delegation of power does not mean that person cannot vote. It is pure democratic system which means that if person votes, he always represents his voting power, and his voting power is not being used by anyone else.",
+      "q7": "How can I help the project?",
+      "a7_1": "Please spread the word on youtube, twitter or other means. We have active engagement program where you can receive Vote Coin tokens.",
+      "a7_2": "If you are developer, please take a look at the engagement program. If you create open source solution based on the vote coin standard, you can receive vote coin token rewards.",
+      "a7_3": "If you represent a DAO or corporation, please support us by purchasing Auditing services. We will calculate the results of voting for you so that you can be ensured you have the correct results.",
+      "q8": "How much will it cost me?",
+      "a8_1": "If you are DAO, it will cost you 0.002 algo per question - you ask a question through blockchain, and set final results.",
+      "a8_2": "Your DAO members will pay pay 0.001 algo to cast votes. They can delegate their voting power for 0.001 to other persons so that they do not have to vote in each question, but rather delegate their voting power to trusted person.",
+      "a8_3": "If DAO wants to manage their own list of allowed person, in one transaction it can add approx 15 accounts to the trusted list.",
+      "a8_4": "If you are single person who wants to ask a question, just place a question to the algo token."
     }
   }
