--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -128,7 +128,19 @@
     "trusted_list_results":"Trusted list result",
     "hypercapitalism_results":"1 coin 1 vote results",
     "vote_help":"If you want to vote, select your preferences please. You can assign your preferences for each answer with rating from zero to 100 points. If you want to select only one answer, please give it 100 points, and other answers to zero points. If you do not know, you do not have to vote, or you can assign all answers the equal number of points. If you vote for one answer in 100 points, and other answer 20 points, your voting power for first answer will be 100/120 = 83% and voting power distribution for second answer will be 17%. If you assign all options 100 points, your voting power distribution will be the same as if you assign all options 1 point.",
-    "check_results":"Check results"
+    "check_results":"Check results",
+    "sbr":"Simple balance results",
+    "sbr_sum":"Sum of accounted tokens",
+    "qbr":"Quadratic balance results",
+    "qbr_sum":"Sum of accounted tokens",
+    "ssar":"Simple single account results",
+    "ssar_sum":"Number of accounted accounts",
+    "qsar":"Quadratic single account results",
+    "qsar_sum":"Number of accounted accounts",
+    "stlr":"Simple trusted list results",
+    "stlr_sum":"Number of accounted accounts",
+    "qtlr":"Quadratic trusted list results",
+    "qtlr_sum":"Number of accounted accounts"
   },
   "votetl":{
     "title":"Trusted list management",    
