--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,7 @@
     "text": "Website you are looking for has not been found."
   },
   "footer": {
-    "text": "Algo Wallet"
+    "text": "Vote Coin App"
   },
   "login": {
     "new_wallet": "New wallet",
