--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -4,7 +4,7 @@
     "text": "Il contenuto che state cercando non è stato trovato"
   },
   "footer": {
-    "text": "Algo Wallet"
+    "text": "Vote Coin App"
   },
   "login": {
     "new_wallet": "Nuovo wallet",
