--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -81,7 +81,10 @@
       "add_response":"Add new ressponse", 
       "category":"Question category",
       "category_placeholder":"Knowledge based category vote delegation in effect",
-      "submit_question":"Ask question using account {accountName}"    
+      "submit_question":"Ask question through blockchain",
+      "encryptedVotingEnabled": "Allow members to use encrypted voting",
+      "encryptionAddress": "Encryption address - Generate new mnemonics for each voting and store it securly",
+      "generateNewAddress": "Generate new encryption mnemonics"
     },
     "votedelegate":{
       "title":"Voting power delegation",
@@ -122,7 +125,7 @@
       "options":"Options",
       "voting_closed":"Voting has been closed",
       "latest_response":"Latest vote for the account {accountName} is selected",
-      "vote_button":"Vote with account {accountName}",
+      "vote_button":"Cast your vote",
       "sum_trusted":"Number of accounted votes",
       "sum_coins":"Sum of accounted coins",
       "trusted_list_results":"Trusted list result",
@@ -140,7 +143,10 @@
       "stlr":"Simple trusted list results",
       "stlr_sum":"Number of accounted accounts",
       "qtlr":"Quadratic trusted list results",
-      "qtlr_sum":"Number of accounted accounts"
+      "qtlr_sum":"Number of accounted accounts",
+      "encryptVoteCast":"Encrypt my voting decision",
+      "submit_results":"Submit my results for audit purposes",
+      "mnemonics_required_to_get_results":"Encrypted voting requires mnemonics to properly calculate the results"
     },
     "votetl":{
       "title":"Trusted list management",    
